// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT license.

syntax = "proto3";

package digitaltwin;

service DigitalTwin {
    rpc FindById (FindByIdRequest) returns (FindByIdResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Unregister (UnregisterRequest) returns (UnregisterResponse);
}

message FindByIdRequest {
   string entity_id = 1;
}

message FindByIdResponse {
   string dtdl = 1;
}

message RegisterRequest {
   string dtdl = 1;
}

message RegisterResponse {
}

message UnregisterRequest {
   string entity_id = 1;
}

message UnregisterResponse {
}